# django.admin.filters

./: .coveragerc  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  READMEru.md  deploy.txt  history.txt  makefile  manage.py  setup.cfg
.github/workflows/: django3.yml  django4.yml  django5.yml  pep257.yml
django_admin_filters/: __init__.py  base.py  daterange.py  daterange_picker.py  mixin.py  multi_choice.py
django_admin_filters/static/css/: datetimepicker.css
django_admin_filters/static/js/: datetimepicker.js
django_admin_filters/templates/: a.html  base.html  daterange.html  daterange_base.html  daterange_picker.html  multi_choice.html
example/: admin.py  models.py  settings.py  views.py
tests/: conftest.py
tests/test/: __init__.py  test_base.py  test_daterange.py  test_multi_choice.py  test_urls.py
