[metadata]
name = django-admin-list-filters
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Embedded filters for Django Admin site
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/django.admin.filters
project_urls =
    Bug Tracker = https://github.com/vb64/django.admin.filters/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = django_admin_filters
python_requires = >=3.7
include_package_data=True
